--- a/pom.xml
+++ b/pom.xml
@@ -97,10 +97,10 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>${spring-boot.version}</version>
-                <configuration>
-                    <mainClass>com.xiushi.usercenter.UserCenterApplication</mainClass>
-                    <skip>true</skip>
-                </configuration>
+<!--                <configuration>-->
+<!--                    <mainClass>com.xiushi.usercenter.UserCenterApplication</mainClass>-->
+<!--                    <skip>true</skip>-->
+<!--                </configuration>-->
                 <executions>
                     <execution>
                         <id>repackage</id>
